# holo-bench

./: LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements.in
.github/workflows/: ci.yml
config/hydra/: benchmark_optimizer.yaml
config/hydra/optimizer/: discrete_evolution.yaml
config/hydra/test_function/: dhfr.yaml  ehrlich.yaml  rough_mt_fuji.yaml  tfbind8.yaml  trpb.yaml
config/wandb/: ehrlich_benchmark_sweep.yaml  lookup_benchmark_sweep.yaml  optimizer_hparam_sweep.yaml  reproduce_fig_4a.yaml  reproduce_fig_4b.yaml  reproduce_fig_4c.yaml  reproduce_fig_4d.yaml  reproduce_fig_5.yaml
holo/: __init__.py
holo/logging/: __init__.py  _wandb_setup.py
holo/optim/: __init__.py  _discrete_evolution.py
holo/test_functions/: __init__.py
holo/test_functions/closed_form/: __init__.py  _ehrlich.py  _rough_mt_fuji.py
holo/test_functions/elemental/: __init__.py  _discrete_markov_process.py  _hamming_dist.py  _motif.py
holo/test_functions/lookup/: __init__.py  _abstract_lookup.py  _dhfr.py  _tfbind8.py  _trpb.py
scripts/: benchmark_optimizer.py
tests/optim/: test_discrete_evolution.py
tests/test_functions/closed_form/: test_discrete_markov_process.py  test_ehrlich.py  test_motif.py
tests/test_functions/lookup/: test_dhfr.py  test_tfbind8.py  test_trpb.py
